@@ -43,12 +43,13 @@ ubuntu-dev-tools (0.109) UNRELEASED; urgency=low
   * Recommend bzr-builddeb (used by sponsor-patch for branches).
   * Add most dependencies to Build-Depends for successfully run the tests.
   * Recommend python-gnupginterface (used by dgetlp).
+  * update-maintainer: Rewrite completely using python-debian (LP: #666504).
 
   [ Michael Vogt ]
   * add "add-patch" that provides the non-interactive version of
     edit-patch
 
- -- Stefano Rivera <stefanor@dvorak.kardiogramm.lan>  Fri, 24 Dec 2010 12:16:10 +0200
+ -- Benjamin Drung <bdrung@ubuntu.com>  Sat, 25 Dec 2010 19:47:14 +0100
 
 ubuntu-dev-tools (0.108) experimental; urgency=low
 
